# test-vcpkg

./: CMakeLists.txt  main.cpp  vcpkg.json
.github/workflows/: ios.yml
vcpkg/triplets/: arm64-ios.cmake
